@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19960226
+MANIFEST for ded, version t19960316
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
